# CitySTAR

./: .env.example  .gitattributes  .gitignore  COMPLETE_PIPELINE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
city_pipeline/: __init__.py  cli.py  config.py  instance_bbox.py  runner.py  sam3_preprocess.py
cityanchor/: BUNDLE_LAYOUT.txt
cityanchor/data_construct_pipeline_Anchor/: 02NER.py  04crop_image_from_json_bbox.py  04crop_image_single_context.py  05_build_same_category_groups.py  05_match_ourcityg3d_to_cityrefer.py  06CLIP_image_all.py  06CLIP_image_all_above_median.py  06CLIP_image_all_below_median_bev_crops.py  07_color_from_image.py
cityanchor/new_code_for_Anchor/: 01_Semantic_color_in_stage1_support_object_proximity_shrink.py  01_Semantic_landmark_in_stage1.py  01_stage1_copy.py  02_extract_main_object_color_llm.py  03_visualize_query_color_conflicts.py  04_rerun_inconsistent_main_color_with_object_name.py  05_visualize_final_query_vs_single_image_colors2_conflicts.py  06_extract_geometry_mentions.py  08reranking_Reranking.py  (+8 more)
cityrefer/: BUNDLE_LAYOUT.txt
configs/: cityanchor.pipeline.json  cityrefer.pipeline.json  sam3_sensaturban.pipeline.json
docs/: CITYANCHOR_PIPELINE.md  CITYREFER_PIPELINE.md  DATA_LAYOUT.md  OPEN_SOURCE_CHECKLIST.md  PIPELINE_OVERVIEW.md  QUICKSTART.md  REMOTE_SERVER_AUDIT.md  REPRODUCIBILITY.md  SAM3_UPSTREAM.md
scripts/: check_project.py  instances_to_bbox.py  run_pipeline.py  verify_bundle.py
tests/: test_pipeline_contract.py
(+57 files in other folders)
